Try fix for icons not showing up.

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -111,19 +111,19 @@ table { border-collapse: collapse; border-spacing: 0; }
 
 /* Import the font file with the icons in it */
 @font-face {
-    font-family: "casper-icons";
-    src:url("../fonts/casper-icons.eot");
-    src:url("../fonts/casper-icons.eot?#iefix") format("embedded-opentype"),
-        url("../fonts/casper-icons.woff") format("woff"),
-        url("../fonts/casper-icons.ttf") format("truetype"),
-        url("../fonts/casper-icons.svg#icons") format("svg");
+    font-family: "icomoon";
+    src:url("../fonts/icomoon.eot");
+    src:url("../fonts/icomoon.eot?#iefix") format("embedded-opentype"),
+        url("../fonts/icomoon.woff") format("woff"),
+        url("../fonts/icomoon.ttf") format("truetype"),
+        url("../fonts/icomoon.svg#icons") format("svg");
     font-weight: normal;
     font-style: normal;
 }
 
 /* Apply these base styles to all icons */
 [class^="icon-"]:before, [class*=" icon-"]:before {
-    font-family: "casper-icons", "Open Sans", sans-serif;
+    font-family: "icomoon", "Open Sans", sans-serif;
     speak: none;
     font-style: normal;
     font-weight: normal;
